Fix code overflow

--- a/_assets/css/_component.scss
+++ b/_assets/css/_component.scss
@@ -16,6 +16,7 @@ input {
 }
 
 .content {
+  overflow: hidden;
   line-height: 1.5;
   h1 {
     font-size: 20px;
